--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+/* Made by Jace Palmer, Ellie Cohen, Jacob Strand, Lauren Edwardsen */
+/* Group 5 */
+
 a {
     color: rgb(0, 120, 0);
     margin: 1%;
